<resources>
    <string name="app_name">Wifi Auto Login</string>
    <string name="Login_Info_Title">Login Info</string>
    <string name="Login_url" translatable="false">http://login.ifsp.edu.br/</string>
    <string name="prefs_user" translatable="false">user</string>
    <string name="prefs_pass" translatable="false">pass</string>
    <string name="Input_User_placeholder">User</string>
    <string name="Input_User_hint">Registration ID with campus initials</string>
    <string name="Input_Password_placeholder">Password</string>
    <string name="Input_Password_hint">Password used in IFSP systems</string>
    <string name="Progress_Status_not_authenticated">Unauthenticated</string>
    <string name="Progress_Status_connected">Authenticated</string>
    <string name="Progress_Status_connecting">Authenticating&#8230;</string>
    <string name="Intro_Text">This app is meant to automate login in open wifi network of Instituto Federal de São Paulo\'s rectory.</string>
    <string name="notification_title" translatable="false">Wifi Auto Login</string>
    <string name="notification_text_executing">Executing&#8230;</string>
    <string name="notification_text_executed">Executed</string>
    <string name="Button_PostRequest_label">Send Post Request</string>
    <string name="PostRequest_Not_Enough_Parameters">Fail! Not all parameters are set</string>
    <string name="Login_Service_Stopped">Login Service has stopped</string>
    <string name="Login_Service_Started">Login Service has started</string>
    <string name="Login_Service_Label">Login Service</string>
    <string name="Login_Service_Processing">Login Service Processing</string>
    <string name="Captive_Portal_Welcome">I was called!</string>
    <string name="ERROR_CAPTIVE_PORTAL_LOGIN">Error on captive portal login:</string>
    <string name="WifiAutoLogin">Wifi Auto Login</string>
    <string name="Login_Service_Stop">Stop</string>
</resources>
